tests/src/frontend/typechecking/invalid/tparams_pattern_tuple3.sk
// We only look at the upper bounds for tparams individually -- if one of
// them works accept it.
fun test<T: (Int, Int) & Int>(x: T): void {
  x match {
  | (_, _) -> void
  }
}

fun main(): void {
  print_string("Pass")
}
